examples/diagnostics_demos/errors/Prism.flx
  fn main() {
    let f = fn(x, x) { x };
    print(f(1, 2));
  }
